@@ -27,10 +27,13 @@ import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.out.jpa.entit
 @Slf4j
 public class JpaScanResultQueryAdapter implements ScanResultQuery {
 
+    public static final String SCAN_EVENT_ENTITY_NULL_ERROR_MESSAGE = "ScanEventEntity or payload is null";
     private final DetectionEventRepository eventRepository;
     private final ScanResultEncryptor scanResultEncryptor;
     private final PiiAccessAuditService auditService;
     private final ObjectMapper objectMapper;
+
+    private static final Set<String> ITEM_EVENT_TYPES = Set.of("item", "attachmentItem");
 
     @Override
     public Optional<LastScanMeta> findLatestScan() {
@@ -38,7 +41,7 @@ public class JpaScanResultQueryAdapter implements ScanResultQuery {
         if (rows == null || rows.isEmpty()) {
             return Optional.empty();
         }
-        var row = rows.get(0);
+        var row = rows.getFirst();
         String scanId = row.getScanId();
         int spaces = eventRepository.countDistinctSpaceKeyByScanId(scanId);
         return Optional.of(new LastScanMeta(scanId, row.getLastUpdated(), spaces));
@@ -55,16 +58,48 @@ public class JpaScanResultQueryAdapter implements ScanResultQuery {
     }
 
     @Override
+    public List<ScanResult> listItemEvents(String scanId) {
+        if (scanId == null || scanId.isBlank()) return List.of();
+        var types = Set.of("item", "attachmentItem");
+        return eventRepository.findByScanIdAndEventTypeInOrderByEventSeqAsc(scanId, types).stream()
+            .map(this::toDomain)
+            .filter(Objects::nonNull)
+            .toList();
+    }
+
+    private ScanResult toDomain(ScanEventEntity scanEventEntity) {
+        if (scanEventEntity == null || scanEventEntity.getPayload() == null) {
+            log.warn(SCAN_EVENT_ENTITY_NULL_ERROR_MESSAGE);
+            return null;
+        }
+
+        try {
+            ScanResult encryptedResult = objectMapper.treeToValue(scanEventEntity.getPayload(), ScanResult.class);
+            return scanResultEncryptor.decrypt(encryptedResult);
+        } catch (Exception e) {
+            log.error("Failed to deserialize scan event", e);
+            return null;
+        }
+    }
+    @Override
     public List<ScanResult> listItemEventsEncrypted(String scanId) {
         if (scanId == null || scanId.isBlank()) {
             return List.of();
         }
 
-        var types = Set.of("item", "attachmentItem");
-        return eventRepository.findByScanIdAndEventTypeInOrderByEventSeqAsc(scanId, types).stream()
+        return eventRepository.findByScanIdAndEventTypeInOrderByEventSeqAsc(scanId, ITEM_EVENT_TYPES).stream()
             .map(this::toEncryptedDomain)
             .filter(Objects::nonNull)
             .toList();
+    }
+
+    @Override
+    public List<ScanResult> listItemEventsEncryptedByScanIdAndSpaceKey(String scanId, String spaceKey) {
+        if (scanId == null || scanId.isBlank()) return List.of();
+        return eventRepository.findByScanIdAndSpaceKeyAndEventTypeInOrderByEventSeqAsc(scanId, spaceKey, ITEM_EVENT_TYPES).stream()
+                .map(this::toEncryptedDomain)
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     @Override
@@ -73,9 +108,8 @@ public class JpaScanResultQueryAdapter implements ScanResultQuery {
             return List.of();
         }
 
-        var types = Set.of("item", "attachmentItem");
         List<ScanResult> results = eventRepository
-            .findByScanIdAndPageIdAndEventTypeInOrderByEventSeqAsc(scanId, pageId, types).stream()
+            .findByScanIdAndPageIdAndEventTypeInOrderByEventSeqAsc(scanId, pageId, ITEM_EVENT_TYPES).stream()
             .map(this::toDecryptedDomain)
             .filter(Objects::nonNull)
             .toList();
@@ -98,7 +132,7 @@ public class JpaScanResultQueryAdapter implements ScanResultQuery {
 
     private ScanResult toEncryptedDomain(ScanEventEntity entity) {
         if (entity == null || entity.getPayload() == null) {
-            log.warn("scanEventEntity or payload is null");
+            log.warn(SCAN_EVENT_ENTITY_NULL_ERROR_MESSAGE);
             return null;
         }
 
@@ -113,7 +147,7 @@ public class JpaScanResultQueryAdapter implements ScanResultQuery {
 
     private ScanResult toDecryptedDomain(ScanEventEntity entity) {
         if (entity == null || entity.getPayload() == null) {
-            log.warn("scanEventEntity or payload is null");
+            log.warn(SCAN_EVENT_ENTITY_NULL_ERROR_MESSAGE);
             return null;
         }
 
